@@ -1,3 +1,8 @@
+2003/11/07 16:49 pcg
+
+	* xs/GdkWindow.xs: implement gdk_window_set_debug_updates.
+        * MANIFEST: Add xs_files*.
+
 2003/11/07 11:53 (+0100) kaffeetisch
 
 	* xs/GtkClipboard.xs: Two other places where PERL_UNUSED_VAR was called
@@ -24,7 +29,7 @@
 
 2003/11/03 18:37 pcg
 
-	* Makefile.PL: avoid package MY for easier access to variables.
+	* Makefile.PL: avoid "package MY" for easier access to variables.
 	* MANIFEST: ScrollBar => Scrollbar.
         * api.pod: Document Scorll[bB] change.
 
